idf_component_register(
SRCS main.cpp  
	Application.cpp
	Model.cpp 
	SdStorrage.cpp
	SdStorrage.h
	GuiApp/GuiApp.cpp
	GuiApp/MainScreen.cpp
	GuiApp/TempSetpointContainer.cpp
	GuiApp/res/clock.c	
	GuiApp/res/calendar.c		
	GuiApp/res/shutdown.c	
	GuiApp/res/snowflake.c
	GuiApp/res/more.c
INCLUDE_DIRS 
)