idf_component_register(
SRCS main.cpp  
	Application.cpp
	Model.cpp 
	SpiFfsStorrage.cpp
	SpiFfsStorrage.h
	Common.hpp
	TaskExample.hpp
	TaskExample.cpp
	Core/BaseTask.hpp
	Core/Mutex.hpp
	Core/MutexLocker.hpp
	Core/Queue.hpp
	Core/Semaphore.hpp
	Core/SYSDelay.hpp
	Core/SYSPort.cpp
	Core/SYSPort.hpp
	Core/SYSTime.hpp
	
	GuiApp/GuiApp.cpp
	GuiApp/MainScreen.cpp
	GuiApp/TempSetpointContainer.cpp
	GuiApp/res/clock.c	
	GuiApp/res/calendar.c		
	GuiApp/res/shutdown.c	
	GuiApp/res/snowflake.c
	GuiApp/res/more.c
INCLUDE_DIRS 
)